[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.1.0"
name = "r6sss"
description = "Rainbow Six Siege Server Status Web API Wrapper Library (Unofficial)"
authors = [
	{name = "Milkeyyy"}
]

classifiers = [
	"Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.*"
dependencies = [
	"httpx"
]

[tool.setuptools]
package-dir = {"" = "src"}
